# requests-ratelimiter

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  HISTORY.md  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: build.yml  deploy.yml
docs/: conf.py  history.md  index.md  reference.rst  requests-ratelimiter.xcf
requests_ratelimit/: __init__.py  adapter.py  requests_ratelimit.py  session.py
requests_ratelimiter/: __init__.py  buckets.py  requests_ratelimiter.py
test/: conftest.py  test_buckets.py  test_exports.py  test_integration.py  test_integration_redis.py  test_requests_ratelimiter.py
