[tool.poetry]
name = "requests-ratelimiter"
version = "0.8.0"
description = "Rate-limiting for the requests library"
authors = ["Jordan Cook"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JWCook/requests-ratelimiter"
repository = "https://github.com/JWCook/requests-ratelimiter"
documentation = "https://requests-ratelimiter.readthedocs.io"
keywords = ["requests", "rate-limiting", "leaky-bucket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
include = [
    {format="sdist", path="*.md"},
    {format="sdist", path="test"},
]

[tool.poetry.dependencies]
python          = "^3.8"
pyrate-limiter  = "<4.0"
requests        = ">=2.20"

# Documentation dependencies needed for Readthedocs builds
furo                     = {optional=true, version="^2024.7"}
myst-parser              = {optional=true, version=">=3.0"}
sphinx                   = {optional=true, python=">=3.9", version="^7.4"}
sphinx-autodoc-typehints = {optional=true, python=">=3.9", version=">2.0"}
sphinx-copybutton        = {optional=true, version=">=0.5"}

[tool.poetry.extras]
docs = ["furo", "myst-parser", "sphinx", "sphinx-autodoc-typehints",
        "sphinx-copybutton", "sphinxcontrib-apidoc"]

[tool.poetry.dev-dependencies]
coverage        = "^7.2"
execnet         = ">=2.0"
pre-commit      = "^2.21"
pytest          = "^8.0"
pytest-cov      = ">=4.0"
pytest-xdist    = ">=3.1"
requests-mock   = ">=1.11"
requests-cache  = ">=1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ['requests_ratelimiter']

[tool.coverage.html]
directory = 'test-reports'

[tool.coverage.xml]
output = 'test-reports/coverage.xml'

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 100
output-format = 'grouped'
target-version = 'py38'

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ['B', 'C4', 'C90', 'E', 'F']
ignore = ['B023']

[tool.ruff.lint.isort]
known-first-party = ['test']

# Wrap lines to 100 chars, but don't error on unwrappable lines until 120 chars
[tool.ruff.lint.pycodestyle]
max-line-length = 120
