[tool.poetry]
name = "requests-ratelimiter"
version = "0.8.0"
description = "Rate-limiting for the requests library"
authors = ["Jordan Cook"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JWCook/requests-ratelimiter"
repository = "https://github.com/JWCook/requests-ratelimiter"
documentation = "https://requests-ratelimiter.readthedocs.io"
keywords = ["requests", "rate-limiting", "leaky-bucket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
include = [
    {format="sdist", path="*.md"},
    {format="sdist", path="test"},
]

[tool.poetry.dependencies]
python          = "^3.8"
pyrate-limiter  = "<3.0"
requests        = ">=2.20"

[tool.poetry.group.dev.dependencies]
coverage        = "^7.6"
pre-commit      = ">=3.0"
pytest          = ">=8.3"
pytest-cov      = ">=4.0"
pytest-xdist    = ">=3.1"
requests-mock   = ">=1.11"
requests-cache  = ">=1.2"

# Documentation dependencies needed for Readthedocs builds
[tool.poetry.group.docs.dependencies]
furo                     = {python=">=3.9", version=">=2024.7,<2026.0"}
myst-parser              = {python=">=3.9", version=">=3.0"}
sphinx                   = {python=">=3.9", version="^7.4"}
sphinx-autodoc-typehints = {python=">=3.9", version=">2.0"}
sphinx-copybutton        = {python=">=3.9", version=">=0.5"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ['requests_ratelimiter']

[tool.coverage.html]
directory = 'test-reports'

[tool.coverage.xml]
output = 'test-reports/coverage.xml'

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 100
output-format = 'grouped'
target-version = 'py38'

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ['B', 'C4', 'C90', 'E', 'F']
ignore = ['B023']

[tool.ruff.lint.isort]
known-first-party = ['test']

# Wrap lines to 100 chars, but don't error on unwrappable lines until 120 chars
[tool.ruff.lint.pycodestyle]
max-line-length = 120
