[project]
name = 'requests-ratelimiter'
version = '0.9.2'
description = 'Rate-limiting for the requests library'
authors = [{name = 'Jordan Cook'}]
license = 'MIT'
readme = 'README.md'
keywords = ['requests', 'rate-limiting', 'leaky-bucket']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: 3.15',
    'Typing :: Typed',
]
requires-python = '>=3.10'
dependencies = [
    'pyrate-limiter ~=4.0',
    'requests       >=2.20',
]

[project.urls]
homepage = 'https://github.com/JWCook/requests-ratelimiter'
repository = 'https://github.com/JWCook/requests-ratelimiter'
documentation = 'https://requests-ratelimiter.readthedocs.io'


[dependency-groups]
dev = [
    'coverage       >=7.6',
    'pre-commit     >=3.0',
    'pytest         >=8.3',
    'pytest-cov     >=4.0',
    'pytest-xdist   >=3.1',
    'requests-mock  >=1.11',
    'requests-cache >=1.2',
]
docs = [
    'furo                       >=2025.12',
    'myst-parser                >=3.0',
    'sphinx                     >=7.0',
    'sphinx-autodoc-typehints   >=2.5',
    'sphinx-copybutton          >=0.5',
]

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.sdist]
include = [
    '/requests_ratelimiter',
    '/test',
    '/README.md',
]

[tool.coverage.run]
branch = true
source = ['requests_ratelimiter']

[tool.coverage.html]
directory = 'test-reports'

[tool.coverage.xml]
output = 'test-reports/coverage.xml'

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 100
output-format = 'grouped'
target-version = 'py38'

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ['B', 'C4', 'C90', 'E', 'F']
ignore = ['B023']

[tool.ruff.lint.isort]
known-first-party = ['test']

# Wrap lines to 100 chars, but don't error on unwrappable lines until 120 chars
[tool.ruff.lint.pycodestyle]
max-line-length = 120
